Fix overflow scrollbar problem.

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -970,7 +970,6 @@ form{
 	height: 60%;
 	bottom: 64px;
 	top: auto;
-	overflow: visible;
 }
 .cloud{
 	background: image-url('cloud.png');
